commited-please check the code before merging

--- a/FrontEnd/tsconfig.json
+++ b/FrontEnd/tsconfig.json
@@ -12,7 +12,7 @@
       "dom",
       "es2023"
     ],
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "noEmit": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true,
