--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -17,6 +17,7 @@
     "expo": "53.0.11",
     "expo-av": "~15.1.5",
     "expo-file-system": "~18.0.2",
+    "expo-sharing": "^13.1.5",
     "expo-speech": "^13.1.7",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
