--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -14,19 +14,23 @@
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
     "@react-navigation/stack": "^7.3.3",
+    "axios": "^1.10.0",
     "expo": "53.0.11",
     "expo-av": "~15.1.5",
     "expo-file-system": "~18.0.2",
+    "expo-linear-gradient": "^14.1.5",
     "expo-speech": "^13.1.7",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.3",
+    "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "^4.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/axios": "^0.9.36",
     "@types/react": "~19.0.10",
     "typescript": "~5.8.3"
   },
